2008-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Update image composition to
	use pixel iterator methods.

2008-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c: Re-wrote all enhancement functions in this
	module to be based on the pixel iterator methods.
	* magick/command.c (ConvertImageCommand, MogrifyImageCommand,
	DisplayImageCommand): Gamma multiple channel syntax was broken.
	Now it is fixed.

2008-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (RGBTransformImage): Optimized lookup table
	generation performance to the maximum extent possible.
	(TransformRGBImage): Optimized lookup table
	generation performance to the maximum extent possible.
	* magick/image.h (RoundDoubleToQuantum): New macro to explicitly
	safely round a 'double' to a Quantum.
	(RoundFloatToQuantum): New macro to explicitly safely round a
	'float' to a Quantum.
	* configure.ac: Add OpenMP support library to LIBS so that
	dependent applications will pick up this dependency without
	themselves needing to enable OpenMP.
	* magick/command.c (CompositeImageList): Don't overwrite matte
	flag for CopyOpacity composition.
	* magick/composite.c (CompositeImage): CopyOpacity composition
	needs the opacity channel to be enabled.
	* PerlMagick/Magick.xs: Dissolve composition with Opacity was not
	working right.  Now it does.

2008-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (HWBTransform): Hue value range was scaled wrong,
	leading to clipping.
	(TransformHWB): Hue value range was scaled wrong, leading to
	clipping.

2008-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (RGBTransformImage): Re-implement transform
	loops using PixelRowIterateMonoModify() in order to simplify the
	code.

2008-05-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (TransformRGBImage): Re-implement transform