@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2008-05-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/effect.c (AddNoiseImage): Implemented using pixel
+        iterators.<BR>
+  <LI> magick/pixel_row_iterator.c (PixelRowIterateDualNew): New pixel
+        iterator.  Similar to existing PixelRowIterateDualModify except
+        that this one is for when initializing a new image.
+
+</UL>
+<p>
 2008-05-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
